--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,60 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
 
+    <ImageView
+        android:id="@+id/imageView_logo"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/layout_container"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/icon_retailistan" />
+
 
     <LinearLayout
-        android:id="@+id/contentLayout"
+        android:id="@+id/layout_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="50dp">
 
-        <EditText
-            android:id="@+id/editText_username"
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="2dp"
-            android:background="@android:color/white"
-            android:hint="@string/username"
-            android:padding="10dp" />
+            android:layout_margin="5dp"
+            android:background="@drawable/message_edittext_background">
+
+            <EditText
+                android:id="@+id/editText_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="2dp"
+                android:background="@null"
+                android:hint="@string/username"
+                android:maxLength="20"
+                android:maxLines="1"
+                android:padding="10dp" />
+        </FrameLayout>
 
 
-        <EditText
-            android:id="@+id/editText_password"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="2dp"
-            android:background="@android:color/white"
-            android:hint="@string/password"
-            android:padding="10dp" />
+            android:layout_margin="5dp"
+            android:background="@drawable/message_edittext_background">
+
+            <EditText
+                android:id="@+id/editText_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="2dp"
+                android:background="@null"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:maxLength="20"
+                android:maxLines="1"
+                android:padding="10dp" />
+        </FrameLayout>
 
 
         <Button
             android:id="@+id/button_login"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="100dp"
+            android:background="@drawable/gradient_animation_list"
+            android:foreground="?android:attr/selectableItemBackground"
             android:padding="10dp"
-            android:text="@string/login" />
+            android:text="@string/login"
+            android:textColor="@android:color/white" />
+
+
+        <TextView
+            android:id="@+id/textView_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="10dp"
+            android:text="@string/register"
+            android:textColor="@color/colorTitleText"
+            android:textSize="15dp" />
 
 
     </LinearLayout>
 
     <FrameLayout
         android:id="@+id/progressLayout"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorBlackTint">
+        android:background="@color/colorBlackTint"
+        android:visibility="gone">
 
         <ProgressBar
             android:layout_width="wrap_content"
