--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/white">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -17,14 +17,28 @@
         android:layout_alignParentBottom="true"
         android:padding="5dp">
 
-        <EditText
-            android:id="@+id/editTex_message"
+        <RelativeLayout
+            android:background="@drawable/message_edittext_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/button_send"
+            android:layout_margin="10dp"
             android:layout_toStartOf="@id/button_send"
-            android:hint="@string/enter_message" />
+            android:padding="15dp">
+
+            <EditText
+                android:id="@+id/editTex_message"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="@null"
+                android:textSize="12dp"
+                android:maxLines="3"
+                android:maxLength="255"
+                android:hint="@string/enter_message" />
+
+        </RelativeLayout>
 
         <ImageButton
             android:id="@+id/button_send"
@@ -34,8 +48,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/send_button_background_disabled"
-            android:padding="10dp"
             android:clickable="false"
+            android:padding="10dp"
             android:scaleType="fitXY"
             android:src="@drawable/ic_send_black_24dp" />
 
