--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,53 +11,92 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="50dp">
 
-        <EditText
-            android:id="@+id/editText_username"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="2dp"
-            android:background="@android:color/white"
-            android:hint="@string/username"
-            android:padding="10dp" />
+            android:layout_margin="5dp"
+            android:background="@drawable/message_edittext_background">
 
-        <EditText
-            android:id="@+id/editText_type_password"
+            <EditText
+                android:id="@+id/editText_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="2dp"
+                android:background="@null"
+                android:hint="@string/username"
+                android:maxLength="20"
+                android:maxLines="1"
+                android:padding="10dp" />
+
+        </FrameLayout>
+
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="2dp"
-            android:background="@android:color/white"
-            android:hint="@string/please_enter_password"
+            android:layout_margin="5dp"
+            android:background="@drawable/message_edittext_background">
 
-            android:inputType="textPassword"
-            android:padding="10dp" />
+            <EditText
+                android:id="@+id/editText_type_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="2dp"
+                android:background="@null"
+                android:hint="@string/please_enter_password"
+                android:inputType="textPassword"
+                android:maxLength="20"
+                android:maxLines="1"
+                android:padding="10dp" />
 
-        <EditText
-            android:id="@+id/editText_re_type_password"
+        </FrameLayout>
+
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="2dp"
-            android:background="@android:color/white"
-            android:hint="@string/please_re_enter_password"
-            android:inputType="textPassword"
-            android:padding="10dp" />
+            android:layout_margin="5dp"
+            android:background="@drawable/message_edittext_background">
+
+            <EditText
+                android:id="@+id/editText_re_type_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="2dp"
+                android:background="@null"
+                android:hint="@string/please_re_enter_password"
+                android:inputType="textPassword"
+                android:maxLength="20"
+                android:maxLines="1"
+                android:padding="10dp" />
+
+        </FrameLayout>
+
 
         <Button
-            android:id="@+id/button_login"
+            android:id="@+id/button_register"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="100dp"
+            android:background="@drawable/gradient_animation_list"
+            android:foreground="?android:attr/selectableItemBackground"
             android:padding="10dp"
-            android:text="@string/register" />
+            android:text="@string/register"
+            android:textColor="@android:color/white" />
 
 
     </LinearLayout>
