--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FFF</color>
+    <color name="colorPrimaryDark">#FFF</color>
+    <color name="colorAccent">#000</color>
     <color name="colorBlackTint">#BF000000</color>
     <color name="colorLightText">#7f8c8d</color>
     <color name="colorSendButtonDisabled">#7f8c8d</color>
+    <color name="colorTitleLight">#546876</color>
+    <color name="colorTitleText">#000</color>
 </resources>
