--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,13 @@
         android:padding="5dp">
 
         <RelativeLayout
-            android:background="@drawable/message_edittext_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/button_send"
             android:layout_margin="10dp"
+            android:layout_toLeftOf="@id/button_send"
             android:layout_toStartOf="@id/button_send"
+            android:background="@drawable/message_edittext_background"
             android:padding="15dp">
 
             <EditText
@@ -33,10 +33,12 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:background="@null"
-                android:textSize="12dp"
-                android:maxLines="3"
+                android:hint="@string/enter_message"
+                android:imeOptions="actionDone"
                 android:maxLength="255"
-                android:hint="@string/enter_message" />
+                android:maxLines="3"
+                android:singleLine="true"
+                android:textSize="12dp" />
 
         </RelativeLayout>
 
