--- a/app/src/main/res/layout/list_item_message.xml
+++ b/app/src/main/res/layout/list_item_message.xml
@@ -26,12 +26,20 @@
             android:layout_below="@id/textView_userName"
             android:layout_marginTop="8dp"
             android:background="@drawable/chat_bubble_received"
-            android:paddingTop="8dp"
             android:paddingBottom="8dp"
-            android:paddingStart="15dp"
             android:paddingEnd="15dp"
+            android:paddingStart="15dp"
+            android:paddingTop="8dp"
             android:text=""
             android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/textView_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView_message"
+            android:text=""
+            android:textColor="@color/colorLightText" />
     </RelativeLayout>
 
 
