Online/Offline Status change Online users list Emoji rendering

--- a/app/src/main/res/layout/list_item_message.xml
+++ b/app/src/main/res/layout/list_item_message.xml
@@ -6,41 +6,38 @@
     android:layout_marginTop="5dp"
     android:padding="10dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/layout_innerContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="start">
+        android:orientation="vertical"
+        android:gravity="end">
 
         <TextView
             android:id="@+id/textView_userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
             android:textColor="@color/colorLightText" />
 
         <TextView
             android:id="@+id/textView_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textView_userName"
             android:layout_marginTop="8dp"
             android:background="@drawable/chat_bubble_received"
             android:paddingBottom="8dp"
             android:paddingEnd="15dp"
             android:paddingStart="15dp"
             android:paddingTop="8dp"
-            android:text=""
             android:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/textView_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textView_message"
-            android:text=""
+            android:textSize="12dp"
             android:textColor="@color/colorLightText" />
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </RelativeLayout>
