--- a/app/src/main/res/layout/list_item_message.xml
+++ b/app/src/main/res/layout/list_item_message.xml
@@ -10,8 +10,8 @@
         android:id="@+id/layout_innerContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="end">
+        android:gravity="end"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView_userName"
@@ -35,8 +35,8 @@
             android:id="@+id/textView_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:textColor="@color/colorLightText" />
+            android:textColor="@color/colorLightText"
+            android:textSize="12dp" />
     </LinearLayout>
 
 
