--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white">
@@ -27,6 +28,7 @@
             android:background="@drawable/message_edittext_background"
             android:padding="15dp">
 
+
             <EditText
                 android:id="@+id/editTex_message"
                 android:layout_width="match_parent"
@@ -53,7 +55,7 @@
             android:clickable="false"
             android:padding="10dp"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_send_black_24dp" />
+            app:srcCompat="@drawable/ic_send_black_24dp" />
 
     </RelativeLayout>
 
